     tika-parser-sqlite3-package artifacts if you want fat jars with dependencies. (TIKA-3510)

   * Tika app writes UTF-8 when an encoding is not specified; the legacy behavior
     was UTF-8 on Mac OS, but System default on other OSs (TIKA-3515).

   * Change the default rendering strategy for PDFs from NO_TEXT to ALL (TIKA-3520).

   Other changes:
   * Fixed bug in Icu4j's encoding detector where it would return non-standard
     names for charsets, e.g. IBM424_rtl is now returned as IBM424 (TIKA-3516).

   * Add a simple UrlFetcher in tika-core as a basic alternative
     to tika-fetcher-http (TIKA-3527).

   * Add tika-pipes support for Google Cloud Storage (TIKA-3524).

   * Fix markup ordering errors in xhtml output for ODT files (TIKA-2242).

   * Fix serialization of embedded docs in OpenSearch emitter
     and fix embedded documents not being indexed in some use
     cases in the Solr emitter (TIKA-3490).

   * Add pipesClientId system property to PipesServer so that each
     forked process can log to its own logger (TIKA-3480).

   * Add DateNormalizingMetadataFilter let users ensure that all dates
     emitted to Solr/OpenSearch are in UTC. Users can configure which
     timezone they'd like to use in cases where the file format does
     not store a timezone (TIKA-3496).

   * Breaking change in the Solr and OpenSearch emitters. To achieve
     the SKIP or CONCATENATE attachment strategy, modify the
     parseMode in the pipesiterators or in the FetchEmitTuple (TIKA-3494).

Release 2.0.0 - 07/07/2021

   * Cleanup of fetcher integration with tika-server.

   * Update dependencies.

Release 2.0.0-BETA - 05/19/2021
   
   * Refactor pipes module for resilience

   * Add transcribe capability (TIKA-94).

Release 2.0.0-ALPHA - 01/13/2021

   BREAKING CHANGES in 2.0.0
   * General
     * OCR is now triggered automatically for PDFs if tesseract
       is on the user's path see (https://cwiki.apache.org/confluence/display/TIKA/TikaOCR#TikaOCR-disable-ocr)